# gespeaker

./: .gitignore  CNAME  README.md  _config.yml  changelog.html  demo.html  index.html  languages.html  params.json  pyproject.toml  screenshots-en.html  screenshots-es.html  screenshots-fr.html  screenshots-it.html  screenshots-pl.html  screenshots.html
Fedora 16/: gespeaker.spec
_includes/: google-analytics.html
_layouts/: architect.html  dinky.html  general.html  hack.html  leapday.html  merlot.html  midnight.html  minimal.html  modernist.html  slate.html  tactile.html  timemachine.html
en/: changelog.html  demo.html  download.html  index.html  install.html  languages.html  mbrola-archlinux.html  mbrola-availability.html  mbrola-debian6.html  mbrola-debian8.html  mbrola-ubuntu1004.html  mbrola-ubuntu1110.html  mbrola-ubuntu1304.html  mbrola.html  screenshots.html
english/: changelog.html  index.html  install.html  mbrola-debian7.html  mbrola-debiansid.html  mbrola-opensuse11.html  mbrola-opensuse12.html  mbrola-opensuse13.html  mbrola-ubuntu1010.html  mbrola-ubuntu1104.html  mbrola-ubuntu1204.html  mbrola-ubuntu1210.html  mbrola.html  screenshots.html
it/: changelog.html  demo.html  download.html  index.html  install.html  languages.html  mbrola-availability.html  mbrola-debian6.html  mbrola-debian7.html  mbrola-debian8.html  mbrola-ubuntu1004.html  mbrola-ubuntu1104.html  mbrola-ubuntu1110.html  mbrola-ubuntu1204.html  mbrola-ubuntu1210.html  mbrola-ubuntu1304.html  mbrola.html  screenshots.html
italian/: changelog.html  index.html  mbrola-archlinux.html  (+8 more)
(+28 files in other folders)
