[tool]
[tool.poetry]
name = "Gespeaker"
version = "0.8.5"
description = "A GTK+ frontend for eSpeak and mbrola"
license = "GPL v2"
homepage = "http://www.muflone.com/gespeaker/"
authors = ["Fabio Castelli <muflone@vbsimple.net>"]

[tool.poetry.dependencies]
python = "^3.9"
configparser = "==4.0.2"
gtts = "==2.1.2"
psutil = "==5.7.3"
pygobject = "==3.38.0"
pyxdg = "==0.27"

[tool.poetry.dev-dependencies]
configparser = "==4.0.2"
flake8 = "==3.8.4"
gtts = "==2.1.2"
psutil = "==5.7.3"
pygobject = "==3.38.0"
pygobject-stubs = "==0.0.2"
pyxdg = "==0.27"
